# SPEQTRO

./: .gitignore  CITATIONS.md  LICENSE  README.md  SPEQTRO Ver2 Commercial Blueprint.md  THIRD-PARTY-NOTICES  blueprint-ver4.md  install.sh  pyproject.toml
assets/: blueprint-v1.md  blueprint-v2.md  generate_benzene_gif.py  generate_logo.py
data/: contaminants.json  reaction_types.json
src/speqtro/: __init__.py  cli.py
src/speqtro/agent/: __init__.py  api_check.py  config.py  loop.py  mcp_server.py  runner.py  sandbox.py  session.py  system_prompt.py  trajectory.py  types.py
src/speqtro/data/: functional_group_shifts.json  solvent_peaks.json
src/speqtro/input/: __init__.py  autodetect.py  bruker.py  csv_peaks.py  image_spectrum.py  ir_image.py  ir_jcamp.py  jcamp.py  mestrexport.py  ms_file.py  spectral_input.py  text_peaks.py
src/speqtro/modes/: __init__.py  pipeline.py  verify.py
src/speqtro/tools/: __init__.py  cascade.py  cascade1.py  chefnmr.py  database.py  dp5.py  ir.py  ms.py  mspred.py  nmr.py  nmrshiftdb.py  nmrshiftdb_predictor.py  ssin.py  structure.py
src/speqtro/ui/: __init__.py  markdown.py  status.py  terminal.py
src/speqtro/vendors/: __init__.py
src/speqtro/vendors/cascade/: __init__.py  bessel_basis.py  pooling.py  segment.py
src/speqtro/vendors/cascade1/: __init__.py  genConf.py
src/speqtro/vendors/chefnmr/: __init__.py  bond_analyzer.py  data_utils.py  model.py
src/speqtro/vendors/chefnmr/modules/: __init__.py  diffusion.py  embedders.py  layers.py  score_models.py  utils.py
src/speqtro/vendors/dp5/: __init__.py  dp4.py
src/speqtro/vendors/mspred/: __init__.py  dag_data.py  dgl_compat.py  gen_model.py  inten_model.py  joint_model.py
src/speqtro/vendors/mspred/common/: __init__.py  chem_utils.py  fingerprint.py  misc_utils.py
src/speqtro/vendors/mspred/magma/: __init__.py  fragmentation.py  run_magma.py
src/speqtro/vendors/ssin/: __init__.py  chem.py  data.py  model.py
src/speqtro/web/: __init__.py  leaderboard.py  server.py
src/speqtro/web/static/: index.html
tests/: conftest.py  test_mspred_pyg.py  test_tools.py
(+22 files in other folders)
